Finished astro tutorial blog.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -19,3 +19,12 @@ h1 {
   margin: 1rem 0;
   font-size: 2.5rem;
 }
+
+.dark body {
+  background-color: #0d0950;
+  color: #fff;
+}
+
+.dark .nav-links a {
+  color: #fff;
+}
