Restyles all project and added more flexibility components.

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,3 +9,9 @@ import ThemeIcon from './ThemeIcon.astro';
   <ThemeIcon />
   <Navigation />
 </header>
+
+<style>
+  header {
+    position: relative;
+  }
+</style>
