--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,6 +7,7 @@ const whiteColor = '#eeeeee';
 const colorGreen = 'lightgreen';
 ---
 
+<div class="footer-space"></div>
 <footer>
   <Social platform="twitter" username="astrodotbuild" />
   <Social platform="github" username="withastro" />
@@ -14,11 +15,15 @@ const colorGreen = 'lightgreen';
 </footer>
 
 <style define:vars={{darkColor, whiteColor, colorGreen}}>
+  .footer-space {
+    padding-top: 2rem;
+  }
+
   footer {
     display: flex;
     justify-content: center;
     gap: 1rem;
-    margin-top: 2rem;
+    margin-top: auto;
     max-width: 100vw;
     width: 100%;
     padding: 30px 0;
