--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -1,6 +1,8 @@
 ---
 import BaseLayout from '../../layouts/BaseLayout.astro';
-import BlogPost from '../../components/BlogPost.astro';
+import PostsList from '@/components/PostsList.astro'
+import PostCard from '@/components/PostCard.astro';
+import { IPost } from '@/types/IPost';
 
 export async function getStaticPaths({ }) {
   const allPosts = await Astro.glob('../posts/*.md');
@@ -22,7 +24,5 @@ const filteredPosts = posts.filter((post) => post.frontmatter.tags.includes(tag)
 ---
 <BaseLayout pageTitle={tag}>
   <p>Posts tagged with {tag}</p>
-  <ul>
-    {filteredPosts.map(post => <BlogPost url={post.url} title={post.frontmatter.title}/>)}
-  </ul>
+  <PostsList posts={filteredPosts} />
 </BaseLayout>
