--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,9 +4,10 @@ html {
 }
 
 body {
-  margin: 0 auto;
   width: 100%;
-  max-width: 80ch;
+  max-width: 100wv;
+  min-height: 100vh;
+  margin: 0 auto;
   padding: 1rem;
   line-height: 1.5;
 }
@@ -21,10 +22,16 @@ h1 {
 }
 
 .dark body {
-  background-color: #0d0950;
+  background-color: #333333;
   color: #fff;
 }
 
 .dark .nav-links a {
   color: #fff;
+}
+
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: table;
 }
