--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,4 +7,9 @@ const pageTitle = "Home Page";
 <BaseLayout pageTitle={pageTitle} alignCenter>
   <h2>My awesome blog subtitle</h2>
   <Greeting client:load messages={["Hi", "Hello", "Howdy", "Hey there"]} />
+  <!-- <style slot="head">
+    body {
+      background: lightcoral !important;
+    }
+  </style> -->
 </BaseLayout>
